#4.0 - Fixed overlap issue in intermediate difficulty

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ table {
   -moz-box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.75);
   box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.75);
   max-height: 80vh;
-  max-height: 500px;
+  max-height: 600px;
   background-color: black;
 }
 
